package com.github.design.pattern.strategy;

public interface DocumentParser {

    String processing(String filePath);

}
